--- a/epic_site/src/styles/home.css
+++ b/epic_site/src/styles/home.css
@@ -1,11 +1,6 @@
 /*
 .css for section-one, section-two, and section-three of home
 */
-/*
-*{
-  overflow: visible;
-}
-*/
 
 /* Section 1 */
 .Section-One{
