--- a/epic_site/src/styles/small-group.css
+++ b/epic_site/src/styles/small-group.css
@@ -18,6 +18,7 @@ panel-color:'rgb(238, 200, 199)';
   display: flex;
   flex-direction: column;
   padding: 0;
+  overflow: hidden;
 }
 .sg-panel{
   position: relative;
